# AgentTrace

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING.md  agenttrace-design-doc.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md  sdk-guide.md
migrations/: env.py
migrations/versions/: 9c0f0295e741_initial_schema.py  add_replays_table.py
web/: README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  index.ts  spans.ts  traces.ts  types.ts
web/src/components/AgentGraph/: AgentGraph.tsx  GraphControls.tsx  GraphLegend.tsx  index.ts
web/src/components/FailurePanel/: FailureCard.tsx  FailurePanel.tsx  index.ts
web/src/components/Layout/: Header.tsx  Layout.tsx
web/src/components/SpanDetail/: SpanDetail.tsx  index.ts
web/src/components/SpanTimeline/: SpanTimeline.tsx  index.ts
web/src/components/TraceDetail/: TraceDetail.tsx  TraceHeader.tsx  TraceTabs.tsx  index.ts
web/src/components/TraceList/: TraceFilters.tsx  TraceList.tsx  TraceRow.tsx  index.ts
web/src/components/common/: CopyButton.tsx  EmptyState.tsx  ErrorState.tsx  LoadingSpinner.tsx  StatusBadge.tsx  index.ts
web/src/hooks/: index.ts  useFailures.ts  useGraph.ts  useMetrics.ts  useSpans.ts  useTrace.ts  useTraces.ts
web/src/pages/: NotFoundPage.tsx  TraceDetailPage.tsx  TracesPage.tsx  index.ts
web/src/utils/: colors.ts  constants.ts  formatters.ts  index.ts
